8-multi-container-kubernetes/k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5000 # what we put in the code to listen to, in node js.
      targetPort: 5000
