8-multi-container-kubernetes/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx # we want an ingress controller based on nginx project
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # how our copy of nginx behaves. removing the '/api' fromt the end of the url
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths: # very similar to what we done before, forward to client or server according to suffix
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service # we just refer to name of the service we can see in the yaml
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service # we just refer to name of the service we can see in the yaml
              servicePort: 5000
